first build success by lzw

--- a/src/LidarAlgorithm/CMakeLists.txt
+++ b/src/LidarAlgorithm/CMakeLists.txt
@@ -5,7 +5,10 @@ include_directories(${GDAL_INCLUDE_DIR})
 message("compile Lidar Algorithm")
 include_directories("../../library/")
 
-find_package(OpenCV)
+
+find_package(OpenCV 4.1.0 REQUIRED) # 找OpenCV 4.0安装路径
+include_directories(${OpenCV_INCLUDE_DIRS}) # 加载OpenCV 4.0的头文件
+
 if(OpenCV_FOUND)
     message(STATUS "complie with openCV")
 else()
@@ -15,6 +18,5 @@ endif()
 add_library(libalgorithm ${DIR_ALGORITHM_SRCS})
 target_link_libraries(libalgorithm libbase libgeometry)
 target_link_libraries(libalgorithm ${GDAL_LIBRARY})
-if(OpenCV_FOUND)
-    	target_link_libraries(libalgorithm ${OpenCV_LIBS})
-endif()
+target_link_libraries(libalgorithm ${OpenCV_LIBS})
+
